--- a/app.wxss
+++ b/app.wxss
@@ -3,8 +3,13 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+
+page{
+  /* display: block; min-height: 100%;  */
+  background-color: #488aff;
+}
