--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -14,11 +14,31 @@
 }
 
 .userinfo-nickname {
-  color: #aaa;
+  color: #fff;
 }
 
 .usermotto {
-  margin-top: 200px;
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.usermotto text {
+  display: flex;
+  width: 50%;
+  height: 2rem;
+  color: #fff;
+  align-items: center;
+  flex-direction: column-reverse;
+  align-content: center;
+  justify-content: center;
+  /* background-color: #488aff; */
+  /* position: fixed; */
+  box-shadow: 0 0 16rpx rgba(0, 0, 0, 0.25);
+  border-radius: 10rpx;
+  font-size: 30rpx;
+  line-height: 50rpx;
 }
 
 .enter {
