--- a/components/alert/alert.wxml
+++ b/components/alert/alert.wxml
@@ -5,8 +5,8 @@
         <view class='wx-dialog-title'>{{ title }}</view>
         <view class='wx-dialog-content'>{{ content }}</view>
         <view class='wx-dialog-footer'>
-          <view class='wx-dialog-btn' catchtap='_cancelEvent'>{{ cancelText }}</view>
-          <view class='wx-dialog-btn' catchtap='_confirmEvent'>{{ confirmText }}</view>
+          <view wx:if='{{cancelText!=null}}' class='wx-dialog-btn' catchtap='_cancelEvent'>{{ cancelText }}</view>
+          <view wx:if='{{confirmText!=null}}' class='wx-dialog-btn' catchtap='_confirmEvent'>{{ confirmText }}</view>
         </view>
     </view>
 </view>
