--- a/components/history/history.wxss
+++ b/components/history/history.wxss
@@ -1,22 +1,29 @@
 /* components/history/history.wxss */
-.root{
-  height: 6rem;
-  border-radius: 1rem;
+
+.history {
+  /* width: 120%; */
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 0 64rpx rgba(0, 0, 0, 0.25) inset;
 }
 
-text{
+.root {
+  height: 6rem;
+  box-shadow: 0 0 64rpx rgba(0, 0, 0, 0.25) inset;
+}
+
+text {
   text-align: center;
   margin-left: 20rpx;
   font-size: 28rpx;
   line-height: 40rpx;
-  color: #eee;
+  color: #333;
 }
 
 .items {
   width: 100%;
   /* height: 6rem; */
-  background-color: #f00;
-  padding: 0;
+  background-color: #488aff;
 }
 
 .item {
@@ -40,8 +47,7 @@ text{
   color: #bbb;
   border-radius: 1rem;
   display: block;
-  /* padding: 0.5rem; */
-  /* padding: 10%; */
+  /* padding: 0.5rem; *//* padding: 10%; */
   margin: 0 auto;
 }
 
