--- a/pages/box/box.wxml
+++ b/pages/box/box.wxml
@@ -14,22 +14,12 @@
 
 
 <!-- 历史纪录 -->
-<!-- <view class='container'> -->
 <history id='history' historys='{{historys}}' bind:bindGameTap="bindHistoryTap" data-game='{{game}}'></history>
-<!-- </view> -->
-
-<!-- 弹窗 -->
-<!-- <view class="container">
-  <alert id='alert' title='标题' content='内容' cancelText='否' confirm='是' bind:cancelEvent="_cancelEvent" bind:confirmEvent="_confirmEvent">
-  </alert>
-
-  <button type="primary" bindtap="showAlert"> ClickMe! </button>
-</view> -->
 
 
 <!-- 切换栏 -->
 <view class="swiper-tab">
-  <view style="padding-left:5px;" class="tab-list-left {{currentNavTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">推荐游戏</view>
+  <view style="padding-left:5px;" class="tab-list-left {{currentNavTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">推荐</view>
   <view class="tab-list-right {{currentNavTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">所有游戏</view>
 </view>
 
@@ -40,7 +30,7 @@
   <swiper-item wx:for="{{gamesData}}" wx:for-index="key" wx:for-item="value">
 
     <!-- 游戏列表组件 -->
-    <gamelist id='gamelist{{key}}' list='{{value.values}}' bind:bindGameTap='bindHistoryTap' data-game='{{game}}'></gamelist>
+    <gamelist id='gamelist' list='{{value.values}}' bind:bindGameTap='bindHistoryTap' data-game='{{game}}'></gamelist>
 
     <!-- 加载更多按钮 -->
     <!-- <button wx:if='{{currentNavTab===1}}' class="button" bindtap='getMoreGames' style='marigin-top:{{itemsHeight}}'>
