--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -19,7 +19,7 @@
   display: flex;
   align-items: center;
   background-color: #fff;
-  color: #488aff;
+  color: #6f6f6f;
 }
 
 .userinfo-avatar {
@@ -30,9 +30,60 @@
 }
 
 .userinfo-nickname {
-  color: #fff;
+  color: #eee;
 }
 
+/* 列表 */
+.list-body{
+  padding-top: 64rpx;
+}
+.list-cell {
+  display: flex;
+  /* flex: 1; */
+  flex-direction: column;
+  background-color: white;
+}
+.item {
+  display: flex;
+  padding: 20rpx 20rpx;
+  border-top: 1rpx solid #ddd;
+  cursor: pointer;
+  /* justify-content: center; */
+  /* justify-items: center; */
+}
+.item .poster {
+  width: 44rpx;
+  height: 44rpx;
+  align-self: center;
+}
+.item .title {
+  /* flex: 1; */
+  text-align: center;
+  margin-left: 44rpx;
+  font-size: 32rpx;
+  color: #333;
+  display: flex;
+  align-items: center;
+}
+.item .dot{
+  flex: 1;
+  align-self: center;
+}
+.item .dot view{
+  width: 16rpx;
+  height: 16rpx;
+  margin-left: 8rpx;
+  border-radius: 50%;
+  background-color: red;
+}
+.item .arrow{
+  align-self: center;
+  width: 32rpx;
+  height: 32rpx;
+}
+
+
+/* 合作联系 */
 .contact {
   width: 256rpx;
   height: 64rpx;
@@ -52,7 +103,7 @@
   display: flex;
   width: 50%;
   height: 2rem;
-  color: #488aff;
+  color: #6f6f6f;
   align-items: center;
   flex-direction: row;
   align-content: center;
